# Conny

./: .gitignore  Cargo.toml  README.md  ^APP_NAME^.doap  conny.doap  dev.sh  flake.nix  meson.build  meson.options
.cargo/: config.toml
build-aux/: ^TOP_LEVEL_DOMAIN^.^DOMAIN_NAME^.^APP_NAME^.Devel.json  moe.nikableh.Conny.Devel.json
data/: app.desktop.in.in  app.gschema.xml.in  app.metainfo.xml.in.in  meson.build  moe.nikableh.Conny.desktop.in.in  moe.nikableh.Conny.gschema.xml.in  moe.nikableh.Conny.metainfo.xml.in.in  moe.nikableh.Conny.service.in
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml.in
data/resources/ui/: window.ui
hooks/: pre-commit.hook
po/: POTFILES.in
src/: application.rs  config.rs  config.rs.in  main.rs  meson.build  window.rs
