[package]
name = "conny"
authors = ["Nika <nika@nikableh.moe>"]
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
gtk = { version = "0.10.0", package = "gtk4", features = ["gnome_48"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
